added chart and completed aside feature

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-default">
+<nav class="navbar">
   <div class="container-fluid">
     <div class="navbar-header">
       <!-- <a class="navbar-brand" href="#">UHN Mock-Up Data</a> -->
@@ -33,7 +33,34 @@
       <li><a href="#">Meningitidis</a></li>
     </ul>
   </div>
+<a><img id="img" src="/images/hospital.jpeg"></a>
 </nav>
-    
+
+<main>
+<aside>
+    <p>"Nurses in our hospitals are constatly exposed to various diseases.
+        this site will simplifiy several exposure and outbreak cases concerning
+        nurses from January 2023, to September 2023!"</p>
+
+        <p>
+            On the right the graph displayed is a rough data sheet of how many nurses
+            were exposed and what they were exposed to. 
+        </p>
+
+        <p>Specific break downs of all the cases (including sites, departments, 
+            and dates, will be found below.</p>
+
+    <img id="germ" src="/images/germ.jpeg">
+
+</aside>
+<article>
+    <img id="graph" src="/images/Graph.png">
+</article>
+
+<div>
+    Where is this
+</div>
+
+</main>  
 </body>
 </html>
