added skeleton structure and media query

--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
     </div>
     <ul class="nav navbar-nav">
       <!-- <li class="active"><a href="#">Home</a></li> -->
-      <li><a href="#">Measles</a></li>
-      <li><a href="#">Mumps</a></li>
-      <li><a href="#">IGAS</a></li>
-      <li><a href="#">Varicella</a></li>
-      <li><a href="#">Scarbies</a></li>
-      <li><a href="#">Mpox</a></li>
-      <li><a href="#">Diphtheria</a></li>
-      <li><a href="#">TB</a></li>
-      <li><a href="#">Meningitidis</a></li>
+      <li><a href="#measles">Measles</a></li>
+      <li><a href="#mumps">Mumps</a></li>
+      <li><a href="#igas">IGAS</a></li>
+      <li><a href="#varicella">Varicella</a></li>
+      <li><a href="#scarbies">Scarbies</a></li>
+      <li><a href="#mpox">Mpox</a></li>
+      <li><a href="#diphtheria">Diphtheria</a></li>
+      <li><a href="#tb">TB</a></li>
+      <li><a href="#meningitidis">Meningitidis</a></li>
     </ul>
   </div>
 <a><img id="img" src="/images/hospital.jpeg"></a>
@@ -39,8 +39,8 @@
 <main>
 <aside>
     <p>"Nurses in our hospitals are constatly exposed to various diseases.
-        this site will simplifiy several exposure and outbreak cases concerning
-        nurses from January 2023, to September 2023!"</p>
+        this page will simplifiy several exposure and outbreak cases concerning
+        nurses at UHN hospitals from January 2023, to September 2023!"</p>
 
         <p>
             On the right the graph displayed is a rough data sheet of how many nurses
@@ -57,9 +57,163 @@
     <img id="graph" src="/images/Graph.png">
 </article>
 
-<div>
-    Where is this
-</div>
+<section class="diseases">
+
+    <section id="measles">
+        <h2>Measles</h2>
+        <p id="date">January 31, 2023 - June 28, 2023</p>
+        <h5>Number of Staff Tested: 35</h5>
+        <h5>Number of High Risk Exposures Requiring Prophylaxis: 6</h5>
+        <h4>Toronto Western Hospital (TWH)</h4>
+            <ul>
+                <li>Department: 7 MS & ED</li>
+                <li>Department: Ed, 9B</li>
+            </ul>
+        <h4>Toronto General Hospital</h4>
+            <ul>
+                <li >Department: 14ES</li>
+                <li>Department: Apheresis</li>
+            </ul>
+    </section>
+
+    <section id="mumps">
+        <h2>Mumps</h2>
+        <p id="date">DATE</p>
+        <h5>Number of Staff Tested: __</h5>
+        <h5>Number of High Risk Exposures Requiring Prophylaxis: __</h5>
+        <h4>Toronto Western Hospital (TWH)</h4>
+            <ul>
+                <li>Department: _________</li>
+                <li>Department: _________</li>
+            </ul>
+        <h4>Toronto General Hospital</h4>
+            <ul>
+                <li >Department: ______</li>
+                <li>Department: _________</li>
+            </ul>
+    </section>
+
+    <section id="igas">
+        <h2>IGAS</h2>
+        <p id="date">DATE</p>
+        <h5>Number of Staff Tested: __</h5>
+        <h5>Number of High Risk Exposures Requiring Prophylaxis: __</h5>
+        <h4>Toronto Western Hospital (TWH)</h4>
+            <ul>
+                <li>Department: _________</li>
+                <li>Department: _________</li>
+            </ul>
+        <h4>Toronto General Hospital</h4>
+            <ul>
+                <li >Department: ______</li>
+                <li>Department: _________</li>
+            </ul>
+    </section>
+
+    <section id="varicella">
+        <h2>Varicella</h2>
+        <p id="date">DATE</p>
+        <h5>Number of Staff Tested: __</h5>
+        <h5>Number of High Risk Exposures Requiring Prophylaxis: __</h5>
+        <h4>Toronto Western Hospital (TWH)</h4>
+            <ul>
+                <li>Department: _________</li>
+                <li>Department: _________</li>
+            </ul>
+        <h4>Toronto General Hospital</h4>
+            <ul>
+                <li >Department: ______</li>
+                <li>Department: _________</li>
+            </ul>
+    </section>
+
+    <section id="scarbies">
+        <h2>Scarbies</h2>
+        <p id="date">DATE</p>
+        <h5>Number of Staff Tested: __</h5>
+        <h5>Number of High Risk Exposures Requiring Prophylaxis: __</h5>
+        <h4>Toronto Western Hospital (TWH)</h4>
+            <ul>
+                <li>Department: _________</li>
+                <li>Department: _________</li>
+            </ul>
+        <h4>Toronto General Hospital</h4>
+            <ul>
+                <li >Department: ______</li>
+                <li>Department: _________</li>
+            </ul>
+    </section>
+
+    <section id="mpox">
+        <h2>Mpox</h2>
+        <p id="date">DATE</p>
+        <h5>Number of Staff Tested: __</h5>
+        <h5>Number of High Risk Exposures Requiring Prophylaxis: __</h5>
+        <h4>Toronto Western Hospital (TWH)</h4>
+            <ul>
+                <li>Department: _________</li>
+                <li>Department: _________</li>
+            </ul>
+        <h4>Toronto General Hospital</h4>
+            <ul>
+                <li >Department: ______</li>
+                <li>Department: _________</li>
+            </ul>
+    </section>
+
+    <section id="diphtheria">
+        <h2>Diphtheria</h2>
+        <p id="date">DATE</p>
+        <h5>Number of Staff Tested: __</h5>
+        <h5>Number of High Risk Exposures Requiring Prophylaxis: __</h5>
+        <h4>Toronto Western Hospital (TWH)</h4>
+            <ul>
+                <li>Department: _________</li>
+                <li>Department: _________</li>
+            </ul>
+        <h4>Toronto General Hospital</h4>
+            <ul>
+                <li >Department: ______</li>
+                <li>Department: _________</li>
+            </ul>
+    </section>
+
+    <section id="tb">
+        <h2>Tuberculosis</h2>
+        <p id="date">DATE</p>
+        <h5>Number of Staff Tested: __</h5>
+        <h5>Number of High Risk Exposures Requiring Prophylaxis: __</h5>
+        <h4>Toronto Western Hospital (TWH)</h4>
+            <ul>
+                <li>Department: _________</li>
+                <li>Department: _________</li>
+            </ul>
+        <h4>Toronto General Hospital</h4>
+            <ul>
+                <li >Department: ______</li>
+                <li>Department: _________</li>
+            </ul>
+    </section>
+
+    <section id="meningitidis">
+        <h2>Meningitisis</h2>
+        <p id="date">DATE</p>
+        <h5>Number of Staff Tested: __</h5>
+        <h5>Number of High Risk Exposures Requiring Prophylaxis: __</h5>
+        <h4>Toronto Western Hospital (TWH)</h4>
+            <ul>
+                <li>Department: _________</li>
+                <li>Department: _________</li>
+            </ul>
+        <h4>Toronto General Hospital</h4>
+            <ul>
+                <li >Department: ______</li>
+                <li>Department: _________</li>
+            </ul>
+    </section>
+
+
+</section>
 
 </main>  
 </body>
